selfhost/test/typechecker/match/error_alreadycovered_literal_after_type.2.out
Error at %FILE_NAME%:5:3
Unreachable match case
  |    1 => {}
       ^
This case has already been covered by a previous case
